feat: 添加文档数据

--- a/docs/常用/css布局/常用布局.md
+++ b/docs/常用/css布局/常用布局.md
@@ -18,6 +18,8 @@ tags:
   import AccordionSource from '../../.vitepress/components/cssLayout/accordion/AccordionSource.md'
   import Arrows from '../../.vitepress/components/cssLayout/arrows/Arrows.vue'
   import ArrowsSource from '../../.vitepress/components/cssLayout/arrows/ArrowsSource.md'
+  import HorizontalVertical from '../../.vitepress/components/cssLayout/horizontalVertical/HorizontalVertical.vue'
+  import HorizontalVerticalSource from '../../.vitepress/components/cssLayout/horizontalVertical/HorizontalVerticalSource.md'
 </script>
 <Accordion />
 <details>
@@ -31,4 +33,12 @@ tags:
 <details>
   <summary>查看源码</summary>
   <ArrowsSource />
+</details>
+
+## 3. 元素水平垂直居中
+
+<HorizontalVertical />
+<details>
+  <summary>查看源码</summary>
+  <HorizontalVerticalSource />
 </details>
