feat: 添加文档数据

--- a/docs/常用/css布局/常用布局.md
+++ b/docs/常用/css布局/常用布局.md
@@ -11,34 +11,8 @@ tags:
 
 # 常用布局
 
-## 1. 可折叠效果布局（手风琴）
-
 <script setup>
-  import Accordion from '../../.vitepress/components/cssLayout/accordion/Accordion.vue'
-  import AccordionSource from '../../.vitepress/components/cssLayout/accordion/AccordionSource.md'
-  import Arrows from '../../.vitepress/components/cssLayout/arrows/Arrows.vue'
-  import ArrowsSource from '../../.vitepress/components/cssLayout/arrows/ArrowsSource.md'
-  import HorizontalVertical from '../../.vitepress/components/cssLayout/horizontalVertical/HorizontalVertical.vue'
-  import HorizontalVerticalSource from '../../.vitepress/components/cssLayout/horizontalVertical/HorizontalVerticalSource.md'
+  import CssLayout from '../../.vitepress/components/cssLayout/index.vue'
 </script>
-<Accordion />
-<details>
-  <summary>查看源码</summary>
-  <AccordionSource />
-</details>
 
-## 2. 不同方向的箭头
-
-<Arrows />
-<details>
-  <summary>查看源码</summary>
-  <ArrowsSource />
-</details>
-
-## 3. 元素水平垂直居中
-
-<HorizontalVertical />
-<details>
-  <summary>查看源码</summary>
-  <HorizontalVerticalSource />
-</details>
+<CssLayout />
