--- a/docs/常用/模板/常用模板.md
+++ b/docs/常用/模板/常用模板.md
@@ -11,16 +11,8 @@ tags:
 
 # 常用模板
 
-## 1. 折叠菜单
-
 <script setup>
-  import Collapse from '../../.vitepress/components/templates/collapse/CollapseDemo.vue'
-  import CollapseSource from '../../.vitepress/components/templates/collapse/CollapseSource.md'
+  import Templates from '../../.vitepress/components/templates/index.vue'
 </script>
 
-<Collapse />
-
-<details>
-  <summary>查看源码</summary>
-  <CollapseSource />
-</details>
+<Templates />
