feat: 添加新的笔记及相关文档

--- a/docs/笔记/前端开发规范.md
+++ b/docs/笔记/前端开发规范.md
@@ -11,13 +11,13 @@ tags:
 
 # 前端开发规范
 
-## [1、Basic Rules](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_1、basic-rules)
+## 1、Basic Rules
 
-## [1.1、html file name suffix（HMTL文件名后缀）](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_11、html-file-name-suffix（hmtl文件名后缀）)
+## 1.1、html file name suffix (HTML文件名后缀)
 
 > 统一使用 `.html`
 
-## [1.2、HTML5 DOCTYPE](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_12、html5-doctype)
+## 1.2、HTML5 DOCTYPE
 
 - 统一使用`HTML5 DOCTYPE`，每个html页面第一行都需要加上`<!DOCTY``PE html>`，以确保在不同的浏览器中有一致渲染模式和标准
 - `!DOCTYPE` 标签保持大写（虽然可以使用小写，建议跟标准的使用保持一致）参考：https://html.spec.whatwg.org/multipage/syntax.html#the-doctype
@@ -38,7 +38,7 @@ tags:
 <html<head<!-- ... --></head<body<!-- ... --></body</html
 ```
 
-## [1.3、lang](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_13、lang)
+## 1.3、lang
 
 - html上建议添加`lang`属性，如果是Multi Language的，不强制
 - 语言列表：https://www.iana.org/assignments/language-subtag-registry/language-subtag-registry
@@ -50,7 +50,7 @@ tags:
 <html<!-- ... --></html
 ```
 
-## [1.4、Meta 标签](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_14、meta-标签)
+## 1.4、Meta 标签
 
 - 统一使用 “UTF-8” 编码
 
@@ -76,7 +76,7 @@ tags:
 <meta name="format-detection" content="telephone=no"
 ```
 
-## [1.5、Semantic(语义)](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_15、semantic语义)
+## 1.5、Semantic(语义)
 
 > 尽量使用符合HTML语义的标签
 
@@ -87,7 +87,7 @@ tags:
 <div onClick="goToList"Go To List</div>
 ```
 
-## [1.6、Uppercase and Lowercase(大小写)](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_16、uppercase-and-lowercase大小写)
+## 1.6、Uppercase and Lowercase(大小写)
 
 - 所有的HTML标签使用小写
 - 所有的HTML标签属性使用小写
@@ -99,7 +99,7 @@ tags:
 <!DOCTYPE html<html<head<Titletitle</Title</head<Body<H1Hello, world!</H1</Body</html
 ```
 
-## [1.7、Don’t omit ](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_17、dont-omit-lthtmlgt-ltheadgt-ltbodygt)
+## 1.7、Don’t omit
 
 ```Plaintext
 // good
@@ -108,7 +108,7 @@ tags:
 <!DOCTYPE html<head<titletitle</title</head<h1Hello, world!</h1
 ```
 
-## [1.8、Comment(注释)](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_18、comment注释)
+## 1.8、Comment(注释)
 
 > 正常使用注释
 
@@ -129,7 +129,7 @@ tags:
 <!-- news --><div class="news"<h2News</h2<p...</p</div<!--/ news -->
 ```
 
-## [1.9、Formatting(格式化)](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_19、formatting格式化)
+## 1.9、Formatting(格式化)
 
 - 使用`两个空格`缩进，不要使用`tab`
 - 自结束标签后面都带上`/`
@@ -159,7 +159,7 @@ tags:
 <ptest          </p
 ```
 
-### [1.10、Protocol（协议）](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_110、protocol（协议）)
+### 1.10、Protocol (协议)
 
 > 嵌入式资源书写省略协议头
 >
@@ -180,15 +180,15 @@ tags:
 }
 ```
 
-## [2、Element（元素）](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_2、element（元素）)
+## 2、Element (元素)
 
-### [2.1、Nest(嵌套)](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_21、nest嵌套)
+### 2.1、Nest(嵌套)
 
 > 元素嵌套遵循 (X)HTML Strict 嵌套规则, 推荐使用Firefox插件 HTML Validator 进行检查;
 >
 > 参考： https://www.w3.org/TR/html4/
 
-### [2.2、多媒体元素降级处理](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_22、多媒体元素降级处理)
+### 2.2、多媒体元素降级处理
 
 > `<img>`图标签尽量添加`alt`属性
 >
@@ -201,7 +201,7 @@ tags:
 <img SRC="xx"
 ```
 
-### [2.3、特殊符号](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_23、特殊符号)
+### 2.3、特殊符号
 
 > 下面的特殊符号建议使用转义字符
 
@@ -213,7 +213,7 @@ tags:
 | &    | 和   | &amp;  |
 | “    | 引号 | &quot; |
 
-### [2.4、id和name](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_24、id和name)
+### 2.4、id和name
 
 > 同一页面中，id和name的属性必须保持唯一
 
@@ -224,7 +224,7 @@ tags:
 <input name="myName" /><div id="myName"</div
 ```
 
-## [3、Reference(参考)](http://localhost:3000/#/zh-cn/development-guideline/web/html?id=_3、reference参考)
+## 3、Reference (参考)
 
 http://www.w3.org/TR/html4/
 
