--- a/docs/笔记/通用开发规范.md
+++ b/docs/笔记/通用开发规范.md
@@ -11,11 +11,11 @@ tags:
 
 # 通用开发规范
 
-## [通用的规范](http://localhost:3000/#/zh-cn/development-guideline/web/name?id=通用的规范)
+## 通用的规范
 
-## [1、文件夹](http://localhost:3000/#/zh-cn/development-guideline/web/name?id=_1、文件夹)
+## 1、文件夹
 
-### [1.1 通用文件夹命名](http://localhost:3000/#/zh-cn/development-guideline/web/name?id=_11-能用文件夹命名)
+### 1.1 通用文件夹命名
 
 - 全部使用英文小写全称
 
@@ -84,7 +84,7 @@ src/
 |- libs
 ```
 
-### [1.2、git相关](http://localhost:3000/#/zh-cn/development-guideline/web/name?id=_12、git相关)
+### 1.2、git相关
 
 - 1.2.1 gitlab相项目名，保持跟`1、文件夹命名`规则保持一致
 - 1.2.2 分支管理
@@ -100,11 +100,11 @@ src/
 | 功能开发分支   | feature/1.0.0_starc | 新功能分支，某个功能点正在开发阶段，基于develop/1.0.0_xxx checkout，发布–>DEV |
 | 紧急bugfix分支 | hotfix/xxx          | 修复线上代码的 bug，基于master checkout ，发布–> UAT                          |
 
-### [1.3、本地项目名](http://localhost:3000/#/zh-cn/development-guideline/web/name?id=_13、本地项目名)
+### 1.3、本地项目名
 
 > 跟`gitlab`项目名保持一致，尽量不修改
 
-### [1.4、vue组件](http://localhost:3000/#/zh-cn/development-guideline/web/name?id=_14、vue组件)
+### 1.4、vue组件
 
 - 使用首字母大写的驼峰命名法
 - `index`文件保持小写，如`index.vue` `index.ts` `index.js`
@@ -131,9 +131,9 @@ components/
 |- - Index.vue
 ```
 
-## [2、文件](http://localhost:3000/#/zh-cn/development-guideline/web/name?id=_2、文件)
+## 2、文件
 
-### [2.1、文件命名](http://localhost:3000/#/zh-cn/development-guideline/web/name?id=_21、文件命名)
+### 2.1、文件命名
 
 - `.html` `.htm` `.shtml` 后缀文件
 
@@ -152,7 +152,7 @@ components/
 > - 正常沿用`1.1 能用文件夹命名`的规则
 > - 是单文件`组件`时，沿用`1.4`组件命名规则，尽量避免使用单个文件做组件，组件建议使用`文件夹`
 
-## [3、Vue/React路由命名](http://localhost:3000/#/zh-cn/development-guideline/web/name?id=_3、vuereact路由命名)
+## 3、Vue/React路由命名
 
 - `name`值命名
   - 采用首页字母大写的驼峰命名规则
@@ -191,7 +191,7 @@ components/
 }
 ```
 
-## [4、JS变量/方法/参数命名](http://localhost:3000/#/zh-cn/development-guideline/web/name?id=_4、js变量方法参数命名)
+## 4、JS变量/方法/参数命名
 
 - 采用首字母小写的驼峰命名规则
 
@@ -212,7 +212,7 @@ const my_Nick_Name = 'Jerman.xie'const my_nick_name = 'Jerman.xie'
 }
 ```
 
-## [5、JS常量命名](http://localhost:3000/#/zh-cn/development-guideline/web/name?id=_5、js常量命名)
+## 5、JS常量命名
 
 - 全部使用大写字母，下划线连接
 
@@ -223,7 +223,7 @@ const MY_USER_NAME = 'Jerman.xie'
 const My_Nick_Name = 'Jerman.xie'const my_nick_name = 'Jerman.xie'
 ```
 
-## [6、HTML之id属性的命名](http://localhost:3000/#/zh-cn/development-guideline/web/name?id=_6、html之id属性的命名)
+## 6、HTML之id属性的命名
 
 - 采用首字母小写的驼峰命名规则
 - 保证唯一性
@@ -235,7 +235,7 @@ const My_Nick_Name = 'Jerman.xie'const my_nick_name = 'Jerman.xie'
 <div id="my-list"></div><div id="my_list"></div>
 ```
 
-## [7、HTML之class属性的命名](http://localhost:3000/#/zh-cn/development-guideline/web/name?id=_7、html之class属性的命名)
+## 7、HTML之class属性的命名
 
 - 使用`-`连接
 - 全部使用小写
